--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,28 @@
 VERSION := $(shell grep . VERSION.txt | cut -f1 -d:)
 PROGRAM_NAME:= kidney_ftu
+osRelease = $(shell lsb_release -r | sed -e "s/Release:\W*//" -e "s/\..*//")
+ifeq ($(osRelease),7)
+	hostName = $(shell hostname | sed -e "s:[-_].*::")$(osRelease)
+else
+	hostName = $(shell hostname | sed -e "s:[-_].*::")
+endif
+
+ifeq ($(hostName),nanohub7)
+	BIN = ../bin
+	MODINIT = . /etc/environ.sh
+	MODCMD = use -e -r anaconda3-5.1
+else
+ifeq ($(hostName),rice7)
+	BIN = ../bin/rice7
+	MODINIT = . $(MODULESHOME)/init/sh
+	MODCMD = module purge 2> /dev/null; module load gcc/7.3.0
+endif
+ifeq ($(hostName),brown7)
+	BIN = ../bin/brown7
+	MODINIT = . $(MODULESHOME)/init/sh
+	MODCMD = module purge 2> /dev/null; module load gcc/7.3.0
+endif
+endif
 
 CC := g++
 # CC := g++-mp-7 # typical macports compiler name
@@ -31,9 +54,9 @@ ARCH := native # best auto-tuning
 
 # CFLAGS := -march=$(ARCH) -Ofast -s -fomit-frame-pointer -mfpmath=both -fopenmp -m64 -std=c++11
 # remove the -march arg to avoid SIGILL error on nanoHUB
-#CFLAGS := -O3 -fomit-frame-pointer -mfpmath=both -fopenmp -m64 -std=c++11
+CFLAGS := -O3 -fomit-frame-pointer -mfpmath=both -fopenmp -m64 -std=c++11
 
-CFLAGS := -march=$(ARCH) -O3 -fomit-frame-pointer -mfpmath=both -fopenmp -m64 -std=c++11
+#CFLAGS := -march=$(ARCH) -O3 -fomit-frame-pointer -mfpmath=both -fopenmp -m64 -std=c++11
 ifeq ($(OS),Windows_NT)
 else
 	UNAME_S := $(shell uname -s)
